--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "alevosia_react",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://api.tau.com.mx",
+  "proxy": "http://alevosia.host8b.me",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
