--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sinon": "^19.0.2",
     "slick-carousel": "^1.8.1",
     "workbox-cacheable-response": "^7.3.0",
+    "workbox-cli": "^7.3.0",
     "workbox-core": "^7.3.0",
     "workbox-expiration": "^7.3.0",
     "workbox-precaching": "^7.3.0",
@@ -41,6 +42,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "postbuild": "workbox generateSW workbox-config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
