--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "mocha": "^10.7.3",
+    "postcss-nesting": "^13.0.1",
     "web-vitals": "^3.5.1"
   }
 }
